feat: R5 support (WIP)