@@ -9,6 +9,7 @@ import org.hl7.fhir.r5.model.Dosage;
 import java.util.List;
 import java.util.ResourceBundle;
 import java.util.concurrent.CompletableFuture;
+import java.util.stream.Collectors;
 
 /**
  * R5 class for translating "asNeededBoolean" / "asNeededCodeableConcept".
@@ -79,7 +80,7 @@ public class AsNeededR5 implements AsNeeded<FDSConfigR5, Dosage> {
         var codesAsText = codes
                 .stream()
                 .map(config::fromCodeableConceptToString)
-                .toList();
+                .collect(Collectors.toList());
 
         return codeAsText
                 .thenApplyAsync(v -> ListToString.convert(bundle, List.of(v)))
