@@ -10,6 +10,7 @@ import java.util.List;
 import java.util.Map;
 import java.util.ResourceBundle;
 import java.util.concurrent.CompletableFuture;
+import java.util.stream.Collectors;
 
 /**
  * R5 class for translating "timing.repeat.dayOfWeek"
@@ -61,7 +62,7 @@ public class DayOfWeekR5 implements DayOfWeek<FDSConfigR5, Dosage> {
                         String dayCode = day.getCode().toLowerCase(); // Get the lowercase day code
                         return dayToText(dayCode);
                     })
-                    .toList();
+                    .collect(Collectors.toList());
 
             return daysToText(dayOfWeeksCodes);
         });
