@@ -11,6 +11,7 @@ import java.util.List;
 import java.util.Map;
 import java.util.ResourceBundle;
 import java.util.concurrent.CompletableFuture;
+import java.util.stream.Collectors;
 
 /**
  * R5 class for translating "timing.repeat.timeOfDay"
@@ -48,7 +49,7 @@ public class TimeOfDayR5 implements TimeOfDay<FDSConfigR5, Dosage> {
                 .getTimeOfDay()
                 .stream()
                 .map(PrimitiveType::getValue)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     /** {@inheritDoc} */
@@ -64,7 +65,7 @@ public class TimeOfDayR5 implements TimeOfDay<FDSConfigR5, Dosage> {
         return CompletableFuture.supplyAsync(() -> {
 
             var times = getTimes(dosage);
-            var timeOfDays = times.stream().map(this::formatString).toList();
+            var timeOfDays = times.stream().map(this::formatString).collect(Collectors.toList());
             var timeOfDaysAsString = ListToString.convert(bundle, timeOfDays);
 
             Map<String, Object> messageArguments = Map.of(
